<resources>
    <string name="app_name" translatable="false">Video Maker</string>


    <string name="application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <string name="full_open_app_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
        <string name="full_ads_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
        <string name="ads_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
        <string name="ads_native" translatable="false">ca-app-pub-3940256099942544/1044960115</string>
        <string name="reward_ads_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
        <string name="full_load_theme" translatable="false">ca-app-pub-3940256099942544/1033173712</string>


    <string name="slide_show">Slide show</string>
    <string name="edit_video">Edit video</string>
    <string name="trim_video">Trim video</string>
    <string name="join_video">Join videos</string>
    <string name="rate_5">Rate 5*</string>
    <string name="share">Share</string>
    <string name="photo">Photo</string>

    <string name="gallery">gallery</string>
    <string name="albums">albums</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="press_hold_item_to_move"><![CDATA[Press & hold item to move]]></string>
    <string name="start">Start</string>
    <string name="selected">Selected</string>
    <string name="photos">photos</string>
    <string name="set_duration">Set Duration</string>
    <string name="no_sound">No sound</string>
    <string name="select_music">Select music</string>
    <string name="use">Use</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="add_text">Add Text</string>
    <string name="text_editor">Text editor</string>
    <string name="text_color">Text Color</string>
    <string name="center">Center</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="regular">Regular</string>
    <string name="bold">Bold</string>
    <string name="bold_italic">Bold Italic</string>
    <string name="italic">Italic</string>
    <string name="strike">Strike</string>
    <string name="underline">Underline</string>
    <string name="select_at_least_2_image">select at least 2 images</string>
    <string name="select_at_least_2_videos">select at least 2 videos</string>
    <string name="select_at_least_1_video">select at least 1 video</string>
    <string name="export_video">Export Video</string>
    <string name="_480_normal">480 - Normal</string>
    <string name="_720_hd">720 - HD</string>
    <string name="_1080_full_hd">1080 - Full HD</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="exporting_video">Exporting Video</string>
    <string name="please_wait_for_a_few_minutes_nwe_are_processing_your_video">Please wait for a few minutes...\n We are processing your video</string>
    <string name="choose_output_video_quality">Choose video quality</string>
    <string name="type_your_text">Type your text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="share_to">Share to</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="joiner">Joiner</string>
    <string name="join">Join</string>
    <string name="please_try_again">Please try again later</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="please_choose_video_quality">Please choose video quality</string>
    <string name="total">Total</string>
    <string name="my_studio">My studio</string>
    <string name="no_project">No Project</string>
    <string name="more">More</string>
    <string name="new_theme">New themes</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_delete_items">Do you want to delete items?</string>
    <string name="do_you_want_delete_item">Do you want to delete the item?</string>
    <string name="nothing_item_selected">No item selected.</string>
    <string name="are_you_want_back_to_home">Do you want to go to Home screen?</string>
    <string name="do_you_want_to_come_back">Do you want to come back?</string>
    <string name="do_you_want_to_save">Do you want to save?</string>
    <string name="do_you_want_to_leave">Do you want to leave the app?</string>
    <string name="do_you_want_to_cancel">Do you want to cancel?</string>
    <string name="minimum_time_is_3_s">Minimum duration 3 seconds!</string>
    <string name="minimum_time_is_10_s">Minimum duration 10 seconds!</string>
    <string name="minimum_time_is_5_s">Minimum duration 5 seconds!</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="we_are_working_hard_to_bring_a_better_experience_for_users">We are working hard to bring users a better experience</string>
    <string name="please_support_us_with_5_star_rating_so_we_can_keep_improving_the_app">Please support us with 5-star rating so that we can keep improving the app!</string>
    <string name="open_camera">open camera</string>
    <string name="default_">Default</string>
    <string name="free_space_too_low">Too low free space! Please clear your device\'s memory to use this feature</string>
    <string name="do_you_want_delete_all_sticker">Do you want to delete all the stickers?</string>
    <string name="do_you_want_delete_all_text">Do you want to delete all the text?</string>
    <string name="download_theme">Download theme</string>
    <string name="watch_video_to_download_theme">Watch video to download Theme</string>
    <string name="done">Done</string>
    <string name="downloading">Downloading</string>
    <string name="no_internet_connection_please_connect_to_the_internet_and_try_again">No internet connection. Please connect to the internet and try again</string>
    <string name="ad_is_not_loaded">Ad is not loaded. Please try again!</string>
    <string name="have_an_error_try_another_music_file">Error! Try another music file.</string>
    <string name="resume">Resume</string>
    <string name="try_again">Try again</string>
    <string name="change_theme">Change theme</string>
    <string name="change_music">Change music</string>
    <string name="change_image_filter">Change image filter</string>
    <string name="change_video_effect">Change video effect</string>
    <string name="change_duration">Change duration</string>
    <string name="can_t_connect_to_internet">Can\'t connect to internet</string>
    <string name="wide_screen">Wide Screen (16:9)</string>
    <string name="vertical">Vertical (9:16)</string>
    <string name="square">Square (1:1)</string>
    <string name="ratio">Ratio</string>
    <string name="quality">Quality</string>

    <string name="please_grant_read_external_storage">Please grant read external storage permission</string>
    <string name="anser_grant_permission">If you don\'t grant permission, you can\'t use this app.</string>
    <string name="goto_setting_and_grant_permission">Goto Setting -> Permission and grant read external storage permission !</string>
    <string name="setting">Setting</string>

    <string name="you_can_use_this_feature">If you don\'t grant permission, you can\'t use this feature.</string>
    <string name="goto_setting_and_grant_camera_permission">Goto Setting -> Permission and grant camera permission !</string>

    <string name="please_set_auto_update_time">Please set auto update time in setting</string>
    <string name="rate_us_5_stars">Rate us 5 stars</string>
    <string name="later">Later</string>

</resources>
