<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bgBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackAlpha45"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/dialogContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_corner_5dp"
        android:clickable="true"
        android:focusable="true"
        android:maxWidth="350dp"
        android:minWidth="350dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:text="@string/export_video"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ratioLabel"
            style="@style/textNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="@string/ratio"
            android:textColor="@color/black"
            android:textSize="@dimen/normalTextSize"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ratioRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/wideRatio"
                style="@style/textNormal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:buttonTint="@color/blueA01"
                android:checked="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/wide_screen"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/normalTextSize" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/verticalRatio"
                style="@style/textNormal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:buttonTint="@color/blueA01"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/vertical"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/normalTextSize" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/squareRatio"
                style="@style/textNormal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:buttonTint="@color/blueA01"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/square"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/normalTextSize" />
        </RadioGroup>

        <View
            android:id="@+id/lineInExportDialog"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:background="@color/grayA01" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="@string/quality"
            android:textColor="@color/black"
            android:textSize="@dimen/normalTextSize"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/normalQuality"
                style="@style/textNormal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:buttonTint="@color/blueA01"
                android:checked="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/_480_normal"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/normalTextSize" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/hdQuality"
                style="@style/textNormal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:buttonTint="@color/blueA01"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/_720_hd"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/normalTextSize" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/fullHDQuality"
                style="@style/textNormal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:buttonTint="@color/blueA01"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/_1080_full_hd"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/normalTextSize" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cancelButton"
                style="@style/Button_In_Dialog"
                android:layout_width="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/bg_cancel_button"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/saveButton"
                style="@style/Button_In_Dialog"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@drawable/bg_ok_button"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
