<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContentInProgress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ho_ui.ProcessVideoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="260dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/art"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@id/guideLine50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/iv_render"
        app:lottie_repeatMode="restart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exportingText"
        style="@style/textNormalBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exporting_video"
        android:textColor="@color/blackA01"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/art" />

    <com.hope_studio.video_maker_slideshow_maker.ho_custom_view.RenderingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exportingText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noticeLabel"
        style="@style/textNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/please_wait_for_a_few_minutes_nwe_are_processing_your_video"
        android:textAlignment="center"
        android:textColor="#8E8E8E"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancelButton"
        style="@style/textNormalBold"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:background="@drawable/bg_cancel_button"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/largeTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeLabel" />

    <LinearLayout
        android:id="@+id/llNative"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancelButton">

        <com.hope_studio.base_ads.ads.widget.NativeAds
            android:id="@+id/nativeAdViewInProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>