<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_black_2"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        style="@style/textNormalBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        tools:context="com.base.activity.HomeActivity">

        <LinearLayout
            android:id="@+id/linearLayoutOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/bgButtonSlideShow"
                android:layout_width="0dp"
                android:layout_height="@dimen/_95sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="3"
                android:background="@drawable/bg_button_slide_show_in_home"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnCreate"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:src="@drawable/ic_create_video" />

                <TextView
                    style="@style/textNormalBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/slide_show"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bgButtonEditVideo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_95sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="2"
                android:background="@drawable/bg_button_edit_video_in_home"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnGallery"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_my_video" />

                <TextView
                    style="@style/textNormalBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/my_studio"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutOption">

            <LinearLayout
                android:id="@+id/bgJoinVideo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/bg_join_spilit"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_join"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/join"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bgTrimVideo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toStartOf="@+id/bgRating"
                android:layout_toEndOf="@+id/bgJoinVideo"
                android:background="@drawable/bg_join_spilit"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_split"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/trim_video"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bgRating"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_join_spilit"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_rate"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/rate_5"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.hope_studio.base_ads.ads.widget.NativeAds
            android:id="@+id/nativeAdViewInProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dark_mode="light" />
    </LinearLayout>
</RelativeLayout>